autenticación con auth0

--- a/Gastos.Pwa/wwwroot/index.html
+++ b/Gastos.Pwa/wwwroot/index.html
@@ -33,6 +33,7 @@
         <span class="dismiss">🗙</span>
     </div>
 
+    <script src="_content/Microsoft.AspNetCore.Components.WebAssembly.Authentication/AuthenticationService.js"></script>
     <script src="js/clipboard.js"></script>
     <script src="js/setCulture.js"></script>
 
