ajustes menu móvil

--- a/Gastos.Pwa/wwwroot/index.html
+++ b/Gastos.Pwa/wwwroot/index.html
@@ -37,6 +37,7 @@
 
     <!-- PWA Scripts -->
     <script src="js/pwa-installer.js"></script>
+    <script src="js/pwa-helper.js"></script>
     <script src="_content/Microsoft.AspNetCore.Components.WebAssembly.Authentication/AuthenticationService.js"></script>
     <script src="js/clipboard.js"></script>
     <script src="js/setCulture.js"></script>
