Refactor JS helpers, update CORS, and clean up codebase
- ✨ **DependencyInjection.cs**: Added `https://localhost:7142` to CORS policy for local development.
- 🔄 **BlazorService.cs**: Updated JS invocation to use `clipboardHelper.copyText`.
- 🛠️ **index.html**: Replaced `clipboard.js` and `setCulture.js` with `clipboard-helper.js` and `culture-helper.js`.
- 🏷️ **clipboard-helper.js**: Renamed namespace from `clipboardCopy` to `clipboardHelper`.
- 🌐 **culture-helper.js**: Added new file for culture-related functionality, replacing `setCulture.js`.
- 🗑️ **setCulture.js**: Removed file as functionality is now in `culture-helper.js`.
- 📱 **manifest.webmanifest**: Changed `orientation` to `natural` for better device adaptability.
- 🔧 **LocalizationConstants.cs**: Updated `SetCultureFunction` to reference `cultureHelper.setCulture`.
- 🧹 **AppHost.cs**: Removed unused commented-out code for `gastos-api` and `gastos-pwa`.

These changes improve modularity, maintainability, and developer experience while cleaning up unused code and aligning the codebase with updated functionality.

--- a/Gastos.Pwa/wwwroot/index.html
+++ b/Gastos.Pwa/wwwroot/index.html
@@ -51,8 +51,8 @@
     <script src="js/azure-routing-test.js"></script>
     
     <!-- Utility Scripts -->
-    <script src="js/clipboard.js"></script>
-    <script src="js/setCulture.js"></script>
+    <script src="js/clipboard-helper.js"></script>
+    <script src="js/culture-helper.js"></script>
 
     <!-- Blazor WebAssembly -->
     <script src="_framework/blazor.webassembly.js"></script>
