--- a/Gastos.Pwa/wwwroot/index.html
+++ b/Gastos.Pwa/wwwroot/index.html
@@ -66,11 +66,12 @@
     <!-- Blazor WebAssembly -->
     <script src="_framework/blazor.webassembly.js"></script>
 
+    <!-- Enhanced Service Worker Registration - Load after PWA scripts -->
+    <script src="sw-registrator.js"></script>
+
     <!-- MudBlazor JS -->
     <script src="_content/MudBlazor/MudBlazor.min.js?v=1"></script>
 
-    <!-- Enhanced Service Worker Registration - Load after PWA scripts -->
-    <script src="sw-registrator.js"></script>
 
     <!-- Application Initialization Script -->
     <script>
@@ -112,36 +113,36 @@
         });
 
         // Verificar que todos los scripts se hayan cargado
-        window.addEventListener('load', () => {
-            setTimeout(() => {
-                const loadedTools = [];
-                if (typeof window.AuthDebugger !== 'undefined') loadedTools.push('AuthDebugger');
-                if (typeof window.PWAInstaller !== 'undefined') loadedTools.push('PWAInstaller');
-                if (typeof window.PWARoutingDebug !== 'undefined') loadedTools.push('PWARoutingDebug');
-                if (typeof window.testAzureRouting !== 'undefined') loadedTools.push('AzureRoutingTest');
-                if (typeof window.pwaUpdater !== 'undefined') loadedTools.push('PWAUpdater');
-                if (typeof window.diagnoseApp !== 'undefined') loadedTools.push('PWADiagnostics');
+        //window.addEventListener('load', () => {
+        //    setTimeout(() => {
+        //        const loadedTools = [];
+        //        if (typeof window.AuthDebugger !== 'undefined') loadedTools.push('AuthDebugger');
+        //        if (typeof window.PWAInstaller !== 'undefined') loadedTools.push('PWAInstaller');
+        //        if (typeof window.PWARoutingDebug !== 'undefined') loadedTools.push('PWARoutingDebug');
+        //        if (typeof window.testAzureRouting !== 'undefined') loadedTools.push('AzureRoutingTest');
+        //        if (typeof window.pwaUpdater !== 'undefined') loadedTools.push('PWAUpdater');
+        //        if (typeof window.diagnoseApp !== 'undefined') loadedTools.push('PWADiagnostics');
 
-                console.log(`✅ Tools loaded: ${loadedTools.join(', ')}`);
+        //        console.log(`✅ Tools loaded: ${loadedTools.join(', ')}`);
 
-                if (loadedTools.length === 0) {
-                    console.warn('⚠️ No tools loaded - Check for script errors');
-                }
+        //        if (loadedTools.length === 0) {
+        //            console.warn('⚠️ No tools loaded - Check for script errors');
+        //        }
 
-                // Verificar estado del service worker
-                if ('serviceWorker' in navigator) {
-                    navigator.serviceWorker.ready.then(registration => {
-                        if (registration.waiting) {
-                            console.warn('⚠️ Service Worker is waiting - app might be showing old content');
-                            console.log('💡 Run window.forceSWUpdate() to apply the update');
-                        }
-                    });
-                }
-            }, 1000);
-        });
+        //        // Verificar estado del service worker
+        //        if ('serviceWorker' in navigator) {
+        //            navigator.serviceWorker.ready.then(registration => {
+        //                if (registration.waiting) {
+        //                    console.warn('⚠️ Service Worker is waiting - app might be showing old content');
+        //                    console.log('💡 Run window.forceSWUpdate() to apply the update');
+        //                }
+        //            });
+        //        }
+        //    }, 1000);
+        //});
 
         // Global error handler for debugging
-        window.addEventListener('error', function(event) {
+        window.addEventListener('error', function (event) {
             console.error('🚨 Global Error:', {
                 message: event.message,
                 source: event.filename,
@@ -152,7 +153,7 @@
         });
 
         // Unhandled promise rejection handler
-        window.addEventListener('unhandledrejection', function(event) {
+        window.addEventListener('unhandledrejection', function (event) {
             console.error('🚨 Unhandled Promise Rejection:', event.reason);
         });
     </script>
