Update version and comment out unused JS files - v51
- 🔢 Updated version number in `HomePage.razor` from "Versión 50" to "Versión 51".
- 🛠️ Commented out `pwa-diagnostics.js` in `index.html`.
- 🛠️ Commented out `pwa-routing-check.js` in `index.html`.
- 🛠️ Commented out `pwa-update-tester.js` in `index.html`.
- 🛠️ Commented out `azure-routing-test.js` in `index.html`.

--- a/Gastos.Pwa/wwwroot/index.html
+++ b/Gastos.Pwa/wwwroot/index.html
@@ -40,16 +40,16 @@
     </div>
 
     <!-- PWA Diagnostics - Load First -->
-    <script src="js/pwa-diagnostics.js"></script>
+    <!--<script src="js/pwa-diagnostics.js"></script>-->
 
     <!-- PWA Routing Check -->
-    <script src="js/pwa-routing-check.js"></script>
+    <!--<script src="js/pwa-routing-check.js"></script>-->
 
     <!-- PWA Scripts -->
     <script src="js/pwa-installer.js"></script>
     <script src="js/pwa-helper.js"></script>
     <script src="js/pwa-updater.js"></script>
-    <script src="js/pwa-update-tester.js"></script>
+    <!--<script src="js/pwa-update-tester.js"></script>-->
 
     <!-- Authentication Script -->
     <script src="_content/Microsoft.AspNetCore.Components.WebAssembly.Authentication/AuthenticationService.js"></script>
@@ -58,7 +58,7 @@
     <script src="js/auth-debug.js"></script>
 
     <!-- Azure Routing Test -->
-    <script src="js/azure-routing-test.js"></script>
+    <!--<script src="js/azure-routing-test.js"></script>-->
 
     <!-- Utility Scripts -->
     <script src="js/clipboard-helper.js"></script>
