Update version and reduce console output clutter - v53
- 🔢 Updated version number in `HomePage.razor` to "Versión 53".
- 🛑 Commented out initial app state logging in `index.html`.
- 🛠️ Suppressed PWA updater initialization log in `pwa-updater.js`.
- 🌐 Commented out environment detection log in `pwa-updater.js`.
- 🗑️ Removed PWA updater script load log in `pwa-updater.js`.
- 📂 Replaced debug function log with `console.groupCollapsed`.
- ✅ Added `console.groupEnd()` to close debug function group.

--- a/Gastos.Pwa/wwwroot/index.html
+++ b/Gastos.Pwa/wwwroot/index.html
@@ -99,15 +99,15 @@
         });
 
         // Log del estado inicial de la aplicación
-        console.log('🚀 Application loading...', {
-            url: window.location.href,
-            hostname: window.location.hostname,
-            isPWA: window.matchMedia('(display-mode: standalone)').matches,
-            hasServiceWorker: 'serviceWorker' in navigator,
-            isDevelopment: isDevelopment,
-            userAgent: navigator.userAgent,
-            timestamp: new Date().toISOString()
-        });
+        //console.log('🚀 Application loading...', {
+        //    url: window.location.href,
+        //    hostname: window.location.hostname,
+        //    isPWA: window.matchMedia('(display-mode: standalone)').matches,
+        //    hasServiceWorker: 'serviceWorker' in navigator,
+        //    isDevelopment: isDevelopment,
+        //    userAgent: navigator.userAgent,
+        //    timestamp: new Date().toISOString()
+        //});
 
         // Verificar que todos los scripts se hayan cargado
         window.addEventListener('load', () => {
