--- a/Gastos.Pwa/wwwroot/index.html
+++ b/Gastos.Pwa/wwwroot/index.html
@@ -41,24 +41,18 @@
 
     <!-- PWA Diagnostics - Load First -->
     <!--<script src="js/pwa-diagnostics.js"></script>-->
-
-    <!-- PWA Routing Check -->
     <!--<script src="js/pwa-routing-check.js"></script>-->
+    <!--<script src="js/pwa-update-tester.js"></script>-->
+    <!--<script src="js/azure-routing-test.js"></script>-->
+    <!--<script src="js/pwa-helper.js"></script>-->
 
     <!-- PWA Scripts -->
     <script src="js/pwa-installer.js"></script>
-    <script src="js/pwa-helper.js"></script>
     <script src="js/pwa-updater.js"></script>
-    <!--<script src="js/pwa-update-tester.js"></script>-->
+    <script src="js/auth-debug.js"></script>
 
     <!-- Authentication Script -->
     <script src="_content/Microsoft.AspNetCore.Components.WebAssembly.Authentication/AuthenticationService.js"></script>
-
-    <!-- Auth Debug Script -->
-    <script src="js/auth-debug.js"></script>
-
-    <!-- Azure Routing Test -->
-    <!--<script src="js/azure-routing-test.js"></script>-->
 
     <!-- Utility Scripts -->
     <script src="js/clipboard-helper.js"></script>
